--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,11 @@
   <link rel="stylesheet" href="assets/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
   <link rel="stylesheet" href="assets/plugins/datatables-buttons/css/buttons.bootstrap4.min.css">
 
-    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+
+  <link rel="stylesheet" href="assets/plugins/select2/css/select2.min.css">
+  <link rel="stylesheet" href="assets/plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css">
+  <link rel="stylesheet" href="assets/plugins/bootstrap4-duallistbox/bootstrap-duallistbox.min.css">
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
@@ -37,6 +41,12 @@
   <!-- AdminLTE App -->
   <script src="assets/dist/js/adminlte.js"></script>
 
+  <!-- Select2 -->
+  <script src="assets/plugins/select2/js/select2.full.min.js"></script>
+  <script src="assets/plugins/bootstrap4-duallistbox/jquery.bootstrap-duallistbox.min.js"></script>
+  <!-- InputMask -->
+  <script src="assets/plugins/moment/moment.min.js"></script>
+  <script src="assets/plugins/inputmask/jquery.inputmask.min.js"></script>
   <!-- PAGE PLUGINS -->
   <!-- jQuery Mapael -->
   <script src="assets/plugins/jquery-mousewheel/jquery.mousewheel.js"></script>
@@ -70,6 +80,18 @@
   <script>
     $(document).ready(function () {
       $(function () {
+        //Initialize Select2 Elements
+        $('.select2').select2()
+
+        //Initialize Select2 Elements
+        $('.select2bs4').select2({
+          theme: 'bootstrap4'
+        })
+
+        // Datemask mm/dd/yyyy
+        // $('#datemask').inputmask('dd/mm/yyyy', { 'placeholder': 'dd/mm/yyyy' });
+        // $('[data-mask]').inputmask();
+
         $("#dataTableDefault").DataTable({
           "paging": true,
           "lengthChange": false,
