--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,9 @@
 
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 
-  <link rel="stylesheet" href="assets/plugins/select2/css/select2.min.css">
-  <link rel="stylesheet" href="assets/plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css">
   <link rel="stylesheet" href="assets/plugins/bootstrap4-duallistbox/bootstrap-duallistbox.min.css">
+
+  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />  
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
@@ -77,16 +77,15 @@
   <script src="assets/plugins/datatables-buttons/js/buttons.print.min.js"></script>
   <script src="assets/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
 
+  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
   <script>
     $(document).ready(function () {
       $(function () {
-        //Initialize Select2 Elements
-        $('.select2').select2()
-
-        //Initialize Select2 Elements
-        $('.select2bs4').select2({
-          theme: 'bootstrap4'
-        })
+        // In your Javascript (external .js resource or <script> tag)
+        $(document).ready(function () {
+          $('.app-select2').select2();
+        });
 
         // Datemask mm/dd/yyyy
         // $('#datemask').inputmask('dd/mm/yyyy', { 'placeholder': 'dd/mm/yyyy' });
@@ -100,17 +99,17 @@
           "info": true,
           "autoWidth": false,
           "responsive": true,
-          buttons: [
-            {
-              extend: 'pdf',
-              filename: 'transactions.pdf',
-              title: 'Transactions',
-              exportOptions: {
-                columns: ':visible'
-              }
-            },
-            'colvis'
-          ],
+          // buttons: [
+          //   {
+          //     extend: 'pdf',
+          //     filename: 'transactions.pdf',
+          //     title: 'Transactions',
+          //     exportOptions: {
+          //       columns: ':visible'
+          //     }
+          //   },
+          //   'colvis'
+          // ],
         }).buttons().container().appendTo('#dataTableDefault_wrapper .col-md-6:eq(0)');
       });
     });
